--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ figure {
   display: inline-block;
   text-align: left;
   vertical-align: middle;
+  margin: 1em;
 }
 figure img {
   max-height: 40rem;
