--- a/style.css
+++ b/style.css
@@ -12,17 +12,38 @@ body {
   margin: 1em;
 }
 header, main, footer {
-  max-width: 800px;
+  max-width: 1000px;
   margin: auto;
 }
 footer {
   padding-bottom: 1em;
 }
 h1, h2, h3 {
-  margin: 1.5em 0 .5em;
+  margin: 1.5em 100px .5em;
 }
-p {
-  margin: .75em 0;
+h1 + h2, h2 + h3 {
+  margin-top: .5em;
+}
+header > p, main > p, footer > p {
+  margin: .75em 100px;
+  line-height: 1.35;
+}
+ul, ol {
+  padding-inline-start: 40px;
+  margin: 1em 60px;
+}
+@media screen and (max-width: 1060px){
+  h1, h2, h3 {
+    margin: 1.5em 0 .5em;
+  }
+  header > p, main > p, footer > p {
+    margin: .75em 0;
+    line-height: 1.35;
+  }
+  ul, ol {
+    padding-inline-start: 40px;
+    margin: 1em 0;
+  }
 }
 a[href] {
   color: #2767d9;
@@ -64,9 +85,21 @@ tr.no-content {
 em, b, strong {
   font-weight: 600;
 }
-a[href^="#"] {
+p > a[href^="#"] {
   vertical-align: super;
   font-size: 80%;
+}
+h1 > a[href^="#"],
+h2 > a[href^="#"],
+h3 > a[href^="#"] {
+  scroll-margin-top: 1em;
+  color: #d2d2d2;
+  transition: color .2s ease;
+}
+h1:hover > a[href^="#"], h1:focus-within > a[href^="#"],
+h2:hover > a[href^="#"], h2:focus-within > a[href^="#"],
+h3:hover > a[href^="#"], h3:focus-within > a[href^="#"] {
+  color: #2767d9;
 }
 .td-last-center tr td:last-of-type {
   text-align: center;
