--- a/style.css
+++ b/style.css
@@ -135,3 +135,26 @@ figure img {
 figure figcaption {
   margin-top: 1em;
 }
+
+hr {
+  overflow: visible;
+  height: 2px;
+  background-color: #e8e8e8;
+  border: none;
+  outline: none;
+  margin: 3em;
+  position: relative;
+}
+
+#toc {
+  font-size: 75%;
+}
+#toc ol, #toc ul {
+  padding-left: 1rem;
+  font-size: inherit;
+  border-left: 2px solid #e8e8e8;
+  margin: 0 0 0.25em -0.55rem;
+}
+#toc li {
+  margin-left: 0.75rem;
+}
