--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header, main, footer {
 footer {
   padding-bottom: 1em;
 }
-h1, h2, h3 {
+h1, h2, h3, h4 {
   margin: 1.5em 100px .5em;
 }
 h1 + h2, h2 + h3 {
@@ -85,20 +85,34 @@ tr.no-content {
 em, b, strong {
   font-weight: 600;
 }
-p > a[href^="#"] {
+dl {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  margin: 0;
+}
+dt {
+  font-weight: 500;
+}
+dd {
+  margin: 0 0 0 .5em;
+}
+p > a[href^="#"],
+td > a[href^="#"] {
   vertical-align: super;
   font-size: 80%;
 }
 h1 > a[href^="#"],
 h2 > a[href^="#"],
-h3 > a[href^="#"] {
+h3 > a[href^="#"],
+h4 > a[href^="#"] {
   scroll-margin-top: 1em;
   color: #d2d2d2;
   transition: color .2s ease;
 }
 h1:hover > a[href^="#"], h1:focus-within > a[href^="#"],
 h2:hover > a[href^="#"], h2:focus-within > a[href^="#"],
-h3:hover > a[href^="#"], h3:focus-within > a[href^="#"] {
+h3:hover > a[href^="#"], h3:focus-within > a[href^="#"],
+h4:hover > a[href^="#"], h4:focus-within > a[href^="#"] {
   color: #2767d9;
 }
 .td-last-center tr td:last-of-type {
