--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ footer {
 h1, h2, h3, h4 {
   margin: 1.5em 100px .5em;
 }
-h1 + h2, h2 + h3 {
+h1 + h2, h2 + h3, h3 + h4 {
   margin-top: .5em;
 }
 header > p, main > p, footer > p {
@@ -33,7 +33,7 @@ ul, ol {
   margin: 1em 60px;
 }
 @media screen and (max-width: 1060px){
-  h1, h2, h3 {
+  h1, h2, h3, h4 {
     margin: 1.5em 0 .5em;
   }
   header > p, main > p, footer > p {
